<resources>
    <string name="app_name">Recipe Book</string>
    <string name="themeTitle">Themes</string>
    <string name="blueText">Blue Background</string>
    <string name="redText">Red Background</string>
    <string name="greenText">Green Background</string>
    <string name="purpleText">Purple Background</string>
    <string name="blackText">White Background</string>

    <string name="purpleBanner">Purple</string>
    <string name="greenBanner">Green</string>
    <string name="redBanner">Red</string>
    <string name="blueBanner">Blue</string>
    <string name="textLabel">Background Color</string>
    <string name="textBanner">Banner Color</string>

    <string name="returnButton">Return</string>
    <string name="themeButton">Apply Changes</string>

    <string name="addRecipeTitle">Add Recipe</string>
    <string name="inputRecipeName">Enter Recipe Title</string>
    <string name="inputRecipeIngredients">Enter Ingredients</string>
    <string name="inputRecipeInstructions">Enter Instructions</string>
    <string name="breakfastButton">Breakfast</string>
    <string name="lunchButton">Lunch</string>
    <string name="dinnerButton">Dinner</string>

    <string name="clearButton">Clear</string>
    <string name="addButton">Add</string>
    <string name="cancelButton">Cancel</string>

    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>





</resources>