<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/themeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/themeTitle"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/textColor"
        android:layout_width="293dp"
        android:layout_height="245dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeTitle">

        <RadioButton
            android:id="@+id/blueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blueText" />

        <RadioButton
            android:id="@+id/redText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redText" />

        <RadioButton
            android:id="@+id/greenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greenText" />

        <RadioButton
            android:id="@+id/purpleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purpleText" />

        <RadioButton
            android:id="@+id/blackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blackText" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="280dp"
        android:layout_height="201dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textColor">

        <RadioButton
            android:id="@+id/purpleBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purpleBanner" />

        <RadioButton
            android:id="@+id/greenBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greenBanner" />

        <RadioButton
            android:id="@+id/redBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/redBanner" />

        <RadioButton
            android:id="@+id/blueBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blueBanner" />
    </RadioGroup>

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="99dp"
        android:text="@string/textLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="21dp"
        android:text="@string/textBanner"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textColor" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/returnButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>